<resources>
    <string name="app_name">Huangye</string>
    <string name="two">two</string>
    <string name="vol">VOL:00</string>
    <string name="image_info">无名</string>
    <string name="works">作品</string>
    <string name="picture">图片</string>
    <string name="artical">文章</string>
    <string name="issues">问题</string>
    <string name="stuff">东西</string>
    <string name="day">25</string>
    <string name="up_count">998</string>
    <string name="app_introduce">应用推荐</string>
    <string name="collet">我的收藏</string>
    <string name="settings">设置</string>
    <string name="go_mark">去评分</string>
    <string name="feedback">反馈</string>
    <string name="user_agreement">用户协议</string>
    <string name="version">版本号</string>
    <string name="logout">退出当前账号</string>
    <string name="about">关于</string>
    <string name="xiaohei_news">小黑新闻</string>
    <string name="xiaohei_news_intro">小黑新闻是一款非常装逼的app</string>
    <string name="month">Nov</string>
    <string name="time">2015年11月25日</string>
    <string name="artical_tittle">当SB遇上SB 那绝对是一件NB的事情</string>
    <string name="author_name">黄其卫</string>
    <string name="stuff_comment">这个东西 我好喜欢，好喜欢好喜欢，还有什么比这个更好玩的呢？</string>
    <string name="question">当程序员是一种什么样的体验？当程序员是一种什么样的体验？当程序员是一种什么样的体验？</string>
    <string name="question_content">当程序员是一种什么样的体验？当程序员是一种什么样的体验？当程序员是一种什么样的体验？当程序员是一种什么样的体验？当程序员是一种什么样的体验？当程序员是一种什么样的体验？</string>
    <string name="author_intro">黄其卫,学生、程序员、肌肉男</string>
    <string name="content_text">记一件在公车上遇见的事... 很是好笑加讽刺..
   话说，到了填志愿的日子，要回学校。我，世界，才哥去到啊咪家。正当啊咪吃饭。这时公车来了。上车或是不上，公车就在那里，就要开走了。这时啊咪刨完饭赶紧上车了。好在我们赶上了这趟车，也倒霉上了这辆车。
   一路掠过N条挂着荔枝的荔枝树。N条速生桉。..（省略一万字关于路边优美的风景）..
  车到了灵东水库，停车，上来了几个老头，啊不是，应该是老男人,五十岁上下。 （还是说老伯伯？）哦，对，还有个老女人。没什么位置了。一个老男人（主角来的）坐在加长版长凳子上，其他找位置坐了..... 我以为就是几个普通的乘客。我无聊中打量了下那个坐长凳的老男人，他的背阴和饭堂分菜的那个辛勤的日夜为我们准备口粮的啊伯有几分神似。
   精彩开始， 老男人坐立不安，啊不是，他在环顾四周，在那有可移动的小凳，然后在我们后面拿了一张胶凳。坐下，神奇的从一个黑色塑料袋中取出一个公文包。翻找着什么，我以为他在找什么文件，看着像办什么事情的公务员，然后竟神奇的取出三张扑克牌：方块九，方块十，黑桃J。我想，大伯你搞啥呢。然后大伯把屁股挪到车的正中央，然后说：既然大家坐车这么无聊咱们来玩个游戏哈。（口音严重，怀疑是灵山人） 我就来了兴趣，嘿，还有这消遣，困顿的眼神精神了。世界问，干嘛呢？我说，玩游戏呢，看看呗。 我觉得很有意思，想叫才哥拍下来，然后那老男人看见，脸色变得不悦，然后快步走过来，想没收手机，我赶紧叫才哥收起来。他又回到他的小胶凳，说：看啦，玩下哈。你们猜到哪个是黑桃J就是赢。压钱进去，可以赢的哈（我忘了他怎么说话怎么开场了大概意思就是叫我们压钱）。嘿，原来是赌钱啊。我丢，我和世界嘻哈。还有这一手啊。
   一开始，有个人压了两块，老男人（我们称他为大神好了，他真的是搞笑），说，两块不行，至少十块。老男人甲就说，十块就十块。换牌，就三张，速度很慢，就左右换，然后老男人甲，就说，中间这个。（灵山话） 然后，就低头往衬衫的口袋找钱。这时，大神用我们看的很慢的慢雷可以掩耳的速度换了牌。老男人甲就把十块钱压中间那个。（他本来对了，我有在看，不过他错了，大神已经“神奇”的换了牌）开牌，很遗憾，老男人甲输了。然后男人乙，丙都参加了。我压这个二十，某男人说。大神又神乎其神的换了牌，但我眼贱，人人都知道他换了牌。 我压这个五十，某某男人按着中间那个牌说。 然后....二十的输了，五十的赢了。这样几回合，于是又有几个参加进去了。（我的天，这车上可是有小孩的）
   嘿，怎么都是刚刚在灵东水库那上来那几个啊。我和世界相视一笑，我们早就明白这是怎么回事了。这个骗术在街上很常见，就是几个托，然后一个庄这样，托呢，怂恿观众or看客or路人甲乙丙丁押注。庄故意让托赢然后让观众觉得钱就是这么好赚。稍有点见识的人一眼就能洞穿。恩。说回大神。话说这时大神大战正酣。我和世界在笑，还有这个啊，还搬到车上了。我说，上了贼车了。世界说，是贼上了车。我顿时觉得这是真理。才哥大声的对我和他旁边的淡定伯说，哈哈，骗人的，真傻逼。淡定伯笑了笑，嘿嘿。我赶紧阻止才哥，说那么大声干嘛。看就可以了。世界说，看什么，一看就知道骗人。我说，看看嘛，看下又不会怀孕。坐啊咪前面的MM扑哧的笑了。
   我在想，呀，这，这，这。司机大哥，不会管吗，你只会开车吗。好吧。我也搞不懂他们怎么回事。收银阿姨也睁两只眼闭着屁眼的袖手旁观。我对世界说，我觉得应该报警。世界说，那就报吧。我说，算了，就这把戏骗不了什么。才哥在旁边一直嘲笑。我顿时觉得，这年头的骗术真是五花八门了。这回真是开了眼界啊。
     突然，大神转移战场，凳子贴着屁股一刀了我们跟前。（忘了说，我们是坐最后的）大神还是一样的换牌，淡定伯不淡定了，也参加了。我和才哥都瞪眼了，敢情这货也是一伙的啊！要是淡定哥火爆点，才哥就要挂彩了。
  坐在啊咪旁边的斗笠伯也压了二十，结果赢了。大神疑惑的看着他，说，来来来，继续买啊。斗笠哥应该不是托，他在我们镇桥头上车的。斗笠哥赢了二十就收手了。然后，淡定伯怂恿才哥压。才哥说，我某钱啊。这时赌注是成百的了。淡定哥拿着几十块和才哥说，来，我们合作，快出一百，很容易赢的。这时要亮牌了。淡定哥说我们压一百四十。我们都没来得及出声，就开牌了。输了。淡定哥说，拿一百出来喂。我看他那猥琐样就来气，心想，我操，你这货够狠啊，下手为强。于是我大声说，一百你妹啊，我们就五元车费。我队某戳有钱哦。大神说，没就算了。来来来，继续。 什么人啊这是，我顿时冒火。
   大神又转移战场了，到回上面去，淡定伯也上去站着继续他的托儿生涯。MM被挤到挪位置。我和世界一起嘲笑这帮傻逼。这年代哪有人上你这当啊。啊咪基本没什么话。戴着耳机继续45度窗外。
   把钱还给我！！！！！！！！！！！！！一位眼睛哥吼了出来，我们顿时激灵，咦？怎么回事？抬起头来看，眼镜哥，男，一米七五上下。可以说身材魁梧了。声音是富有“磁性”的沙哑，估计的紧张的功劳。  把钱还给我！我看到你换牌了！ 大神怒了，年轻人，别冲动，愿赌服输。（服你妹啊，你这骗子）
   眼镜哥大吼：我看见你换牌了，把钱还给我！（眼镜哥要动手了）
   大神怒：你输了就是输了，叫什么。（紧张，我和世界一起发现原来真有人这么傻啊）
   眼镜哥继续怒：别想骗我，我不是农村人！（哎呀，你太伤我们农村人了，我们农村人不带这么笨的，精得很呢）
   大神也怒：给个毛你，你想怎么样。（众托假装好心欲拦眼睛哥，无奈眼镜哥力大无比，这些二货表示无助）
   眼镜哥：你TM还不还给我？MD我怕你吗？（声音洪亮，很有气场。眼镜哥要和大神打起来。）
   大神火爆：就是骗你怎么样！（这句话有力的回击了眼镜哥，摆明是耍流氓,我都想上前给他一把掌，但出于对老人的尊敬，我忍了）
众托儿见拦架未果，就坐待世界大战爆发了。（乘客都无奈这群人纷纷叫停车让他们下车打，司机也是识时务的人，停车，开门。众托散场，下车，但见眼镜哥是个愣头青，就是要还钱。扭着扭着楞是不下车，我和世界说下车吧我们。世界说搭完全程。怕什么，我们又没怎么他们。我一开始为眼镜哥孤军奋战和几个老伯准备殊死搏斗，我都想帮他，但托儿都下车了，心情就为那大神悲哀了，你一老头那够眼镜哥来啊？于是我们就坐看好戏）
车，还是无奈的开了。其实我一直害怕大神的公文包有刀子或者什么武器那眼镜哥就完了，不仅他完，我们都要完了。我想，要是眼镜哥处于劣势我就帮他，其实那时我很想报警来着。
  眼镜哥抓着大神狰狞的说：把钱还给我！四百块钱，不然我打120   (什么？120？我没听错？还有，400块钱啊，目测是伪富二代啊）
  大神说：你输了就输了。嚷嚷什么？（大神处于劣势了）
  眼镜哥说：快点还还给我！我看到你换牌了，不然我报警打120 。 （无语，一开始我以为我听错。还真是120啊。城市人，你那混的这啊）
  大神怒目瞪着眼镜哥：我没钱,你没见我刚刚输钱么？（都是托，输什么呢，倒是丢脸丢到家啦）
  眼镜哥掏出手机（目测是三星某型号，安卓机来的）：你不还是吧，好，我报120叫公安局拉你！（我受不了啦，我大声喊，大哥，是110呀）
  眼镜哥没听到，解锁什么的，触屏机就这麻烦，紧张手颤了，点错了还得从来啊！所以。。拨打电话是空前的困难啊。大神要抢过手机，报什么警不准你报！ 眼镜哥吼了，还钱来！！！！！   大神拧不过他。开始伸手进公文包。 快点！四百！ 大神很久都没拿出钱，说，没有四百，我只有两百。 我就要四百！我看见你换牌了！四百！眼镜哥的声音更哑了。此时准备到灵山了。 无奈，大神遇到这个愣头青，完整四百归还。但是还是在争吵。
  眼镜哥卖乖了：你现在给我下车！不然我报警。（气场来了。我想鼓掌啊！！！！！）
大神理亏了：报就报，你也有份。你也有份！！！ （这个......）
 眼镜哥说：有份就有份！！！！（这句话真爷们）赶紧下车！！！不然我报120了（= =..大哥不是我想说你.你常识真是好啊）
 大神也拿出手机（果断山寨机）：我拍下你这小子。别让我见到你！（要拉人么，我要报120的哦）
眼镜哥才不给这机会他，欲伸手抢过山寨机。继续喊道：下车！！！！！不下车我就报120！！！！！！！！！
此时车已到站。不下也得下了。
  之后，我们就走了。也不晓得他们去公安局了没有。同搭车的阿姨和我聊了两句。阿姨说：我一看就知道是骗子，我都躲着呢。
我说：阿姨高见，我也是这么觉得。
  于是我，世界，才哥，阿咪在去学校的路上一路的谈资都是这件事。我们都说这眼镜哥是傻逼，大神是十足的骗子，托是最胆小的托。
当SB遇上SB可想而知是什么事情了。
我一直愧疚当时没报警，以及偷拍未遂。我们和眼镜哥差不多。带点麻木。祸不及我，阿弥陀佛。
眼镜哥怎么说都是个英雄，他捣毁了赌局，也爷们了一次。也给我们生动的上了一课，就是要跟你楞！你狠？我比你楞！！！
最后要给大家建议：大家遭遇类似事情，不要贪心，不要赌博。做个有常识的农村孩子，五十岁别搭公车骗钱。别麻木。多热爱生活。有时被欺负就要有不怕死的精神，要像眼镜哥一样楞！跟他楞到底！
 谨以此文记下我多彩的生活。以及这多彩的世界。以及大神，以及眼镜哥。

此文除辞藻不都华丽外纯属真实，如有雷同，请速度报警！！</string>
</resources>
