<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_width"
        android:background="@drawable/psb">

        <ImageView
            android:id="@+id/back_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/all_padding"
            android:background="@drawable/left" />

        <ImageView
            android:id="@+id/icon_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/big_conllect" />

        <TextView
            android:id="@+id/collect_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_collect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/middle_padding"
            android:text="@string/collet"
            android:textColor="@color/white_with_grey"
            android:textSize="@dimen/text_width" />

        <View
            android:id="@+id/view_line"
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/collect_tv"
            android:layout_marginLeft="@dimen/all_padding"
            android:layout_marginRight="@dimen/all_padding"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view_line"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/picture"
                android:textColor="@color/white_with_grey"
                android:textSize="@dimen/content_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/artical"
                android:textColor="@color/white_with_grey"
                android:textSize="@dimen/content_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/issues"
                android:textColor="@color/white_with_grey"
                android:textSize="@dimen/content_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stuff"
                android:textColor="@color/white_with_grey"
                android:textSize="@dimen/content_size" />



        </LinearLayout>

    </RelativeLayout>
</LinearLayout>