<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/all_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/issue_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_margin="@dimen/all_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/question"/>

            <TextView
                android:id="@+id/issue_tittle"
                android:paddingTop="@dimen/all_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_size"
                android:text="@string/question"
                android:maxLines="3"/>

        </LinearLayout>

        <TextView
            android:id="@+id/issue_content"
            android:paddingTop="@dimen/all_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:text="@string/question_content"
             />
        <View
            android:id="@+id/view_line"
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/all_padding"
            android:layout_marginBottom="@dimen/all_padding"
            android:background="@color/little_dark"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_margin="@dimen/all_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/balloon"/>

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/answer_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_width"
                android:text="@string/author_name"
                 />

        </LinearLayout>
        <TextView
            android:id="@+id/answer_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:text="@string/question_content"
            />
        <ImageButton
            android:id="@+id/up_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/little_padding"
            android:background="@drawable/image_tabbar_button_search" />

        <TextView
            android:id="@+id/up_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/little_dark"
            android:textSize="@dimen/content_size"
            android:text="@string/up_count"/>
    </LinearLayout>
</ScrollView>
