<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/all_padding">


        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="home"-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->

        <TextView
            android:id="@+id/version_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vol" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_width"
            android:layout_marginTop="@dimen/all_padding"
            android:background="@drawable/home" />

        <TextView
            android:id="@+id/image_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/all_padding"
            android:text="@string/image_info"
            android:textSize="@dimen/text_width" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_info"
                android:textSize="@dimen/text_width" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/all_padding"
                android:text="@string/works"
                android:textSize="@dimen/text_width" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_padding">

            <TextView
                android:id="@+id/day_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="@color/little_bule"
                android:textSize="@dimen/day_width" />

            <TextView
                android:id="@+id/month_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/day_tv"
                android:text="@string/month"
                android:textSize="@dimen/time_text_size" />

            <TextView
                android:id="@+id/year_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/day_tv"
                android:layout_marginLeft="@dimen/little_padding"
                android:layout_toRightOf="@+id/month_tv"
                android:text="@string/month"
                android:textSize="@dimen/time_text_size" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/little_padding"
                android:layout_toRightOf="@+id/year_tv"
                android:background="@drawable/home00" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/up_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/little_padding"
            android:background="@drawable/thumb" />
    </LinearLayout>
</ScrollView>